# Robotic_toy

./: CMakeLists.txt  README.md  package.xml  testReadme.md
config/: toy_robot.rviz
docs/: Doxyfile
docs/html/: _control_turtlebot_8cpp.html  _control_turtlebot_8cpp__incl.map  _control_turtlebot_8cpp__incl.md5  _control_turtlebot_8cpp_source.html  _control_turtlebot_8hpp_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  class_control_turtlebot-members.html  class_control_turtlebot.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  input_8cpp.html  input_8cpp__incl.map  input_8cpp__incl.md5  input_8cpp_source.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  main_8cpp_source.html  md_README.html  pages.html  test_8cpp_source.html
docs/html/search/: all_0.js  all_3.js  all_4.js  all_5.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  pages_0.js  searchdata.js
docs/latex/: _control_turtlebot_8cpp.tex  _control_turtlebot_8cpp__incl.md5  annotated.tex  class_control_turtlebot.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  input_8cpp.tex  input_8cpp__incl.md5  main_8cpp.tex  main_8cpp__incl.md5  md__home_viki_catkin_ws_src_Robotic_toy_README.tex  refman.tex
include/: ControlTurtlebot.hpp
launch/: toy_robot.launch
msg/: input.msg
results/: cppcheck.txt  cpplint.txt  recording.bag
src/: .ControlTurtlebot.py.swp  ControlTurtlebot.cpp  ControlTurtlebot.py  input.cpp  main.cpp  test.cpp
srv/: input.srv
test/: mainTest.cpp  test.cpp  test_launch.launch
world/: toy_world.world
